--- a/_posts/2023-03-15-rudeops.md
+++ b/_posts/2023-03-15-rudeops.md
@@ -2,7 +2,7 @@
 layout: post
 title: Newsletter du 15 Mars 2023
 subtitle: C'est la première et on est super content !
-thumbnail-img: /assets/img/illustrations/Alain.PNG
+thumbnail-img: /assets/img/Alain.PNG
 gh-repo: daattali/beautiful-jekyll
 tags: [devops, gitops, cloud]
 comments: true
