--- a/_posts/2023-04-14-rudeops.md
+++ b/_posts/2023-04-14-rudeops.md
@@ -2,7 +2,7 @@
 layout: post
 title: Newsletter du 14 Avril 2023
 subtitle: One does not simply Do DevOps
-thumbnail-img: /assets/img/illustrations/Barbara loupe.png
+thumbnail-img: /assets/img/Barbara loupe.png
 gh-repo: daattali/beautiful-jekyll
 tags: [devops, obervability, cybersec]
 comments: true
