--- a/_posts/2023-05-02-rudeops.md
+++ b/_posts/2023-05-02-rudeops.md
@@ -2,7 +2,7 @@
 layout: post
 title: Newsletter du 02 Mai 2023
 subtitle: La newsletter classée première à l'Eurovision	
-thumbnail-img: /assets/img/illustrations/charlie panneaux.png
+thumbnail-img: /assets/img/charlie panneaux.png
 gh-repo: daattali/beautiful-jekyll
 tags: [devops, three ways, cybersec, kubernetes]
 comments: true
