--- a/_posts/2023-06-01-rudeops.md
+++ b/_posts/2023-06-01-rudeops.md
@@ -2,7 +2,7 @@
 layout: post
 title: Newsletter du 01 Juin 2023
 subtitle: Et notre décision est irrévocable.	
-thumbnail-img: /assets/img/illustrations/eternue.png
+thumbnail-img: /assets/img/eternue.png
 gh-repo: daattali/beautiful-jekyll
 tags: [devops, ransomware, cloud, Raas]
 comments: true
