--- a/_posts/2023-07-03-rudeops.md
+++ b/_posts/2023-07-03-rudeops.md
@@ -2,7 +2,7 @@
 layout: post
 title: Newsletter du 03 Juillet 2023
 subtitle: Richard Stallman dément formellement avoir incendié les locaux de RedHat		
-thumbnail-img: /assets/img/illustrations/Charlie regarde au loin.png
+thumbnail-img: /assets/img/Charlie regarde au loin.png
 gh-repo: daattali/beautiful-jekyll
 tags: [devops, DNS, cybersec]
 comments: true
