--- a/_posts/2023-09-15-rudeops.md
+++ b/_posts/2023-09-15-rudeops.md
@@ -2,7 +2,7 @@
 layout: post
 title: Newsletter du 15 Septembre 2023
 subtitle: Traque sur Internet	
-thumbnail-img: /assets/img/illustrations/lettre.png
+thumbnail-img: /assets/img/lettre.png
 gh-repo: daattali/beautiful-jekyll
 tags: [devops, kubernetes, cybersec]
 comments: true
