--- a/_posts/2023-10-02-rudeops.md
+++ b/_posts/2023-10-02-rudeops.md
@@ -2,7 +2,7 @@
 layout: post
 title: Newsletter du 02 Octobre 2023
 subtitle: Per Horus et per Ra et per Sol Invictus duceres	
-thumbnail-img: /assets/img/illustrations/Barbara Lit.png
+thumbnail-img: /assets/img/Barbara Lit.png
 gh-repo: daattali/beautiful-jekyll
 tags: [devops, terraform, cybersec, shell]
 comments: true
