--- a/_posts/2023-10-16-rudeops.md
+++ b/_posts/2023-10-16-rudeops.md
@@ -2,7 +2,7 @@
 layout: post
 title: Newsletter du 16 Octobre 2023
 subtitle: Chippeur arrête de chiper !	
-thumbnail-img: /assets/img/illustrations/Alain mesure.png
+thumbnail-img: /assets/img/Alain mesure.png
 gh-repo: daattali/beautiful-jekyll
 tags: [devops, dora, space, devex]
 comments: true
