--- a/_posts/2023-11-02-rudeops.md
+++ b/_posts/2023-11-02-rudeops.md
@@ -2,7 +2,7 @@
 layout: post
 title: Newsletter du 02 Novembre 2023
 subtitle: M'enfin ?	
-thumbnail-img: /assets/img/illustrations/Courrier.png
+thumbnail-img: /assets/img/Courrier.png
 gh-repo: daattali/beautiful-jekyll
 tags: [devops, OpenTofu, Terraform]
 comments: true
