--- a/_posts/2023-12-01-rudeops.md
+++ b/_posts/2023-12-01-rudeops.md
@@ -2,7 +2,7 @@
 layout: post
 title: Newsletter du 01 Décembre 2023
 subtitle: La newsletter du petit-déjeuner
-thumbnail-img: /assets/img/illustrations/Alain-anssi.png
+thumbnail-img: /assets/img/Alain-anssi.png
 gh-repo: daattali/beautiful-jekyll
 tags: [devops, eBPF, Docker, Hashicorps, ANSSI]
 comments: true
