--- a/_posts/2023-12-15-rudeops.md
+++ b/_posts/2023-12-15-rudeops.md
@@ -2,7 +2,7 @@
 layout: post
 title: Newsletter du 15 Décembre 2023
 subtitle: La newsletter sans 49.3	
-thumbnail-img: /assets/img/illustrations/Tuyaux.png
+thumbnail-img: /assets/img/Tuyaux.png
 gh-repo: daattali/beautiful-jekyll
 tags: [devops, Docker, GSQL]
 comments: true
